<style> transform project architecture towards clean architecture split dataservice into person & group service

--- a/Draftor.csproj
+++ b/Draftor.csproj
@@ -158,4 +158,8 @@
 	  <Folder Include="Resources\Styles\Controls\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\Draftor.Application\Draftor.Core.csproj" />
+	</ItemGroup>
+
 </Project>
